<resources>
    <string name="app_name">BookShare</string>
    <string name="adviceHint">请提出您的宝贵意见</string>
    <string name="okBtn">确认</string>
    <string name="login_name">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="returnTime">截止时间：</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>
    <string name="bookImage">图书图片</string>
    <string name="introduce">图书简介:</string>
    <string name="expand_introduce">展开</string>
    <string name="bookName">书名:</string>
    <string name="bookWriter">作者:</string>
    <string name="bookPress">出版社:</string>
    <string name="publishedDate">出版日期:</string>
    <string name="isbn">ISBN:</string>
    <string name="time">时间:</string>
    <string name="bookowner">书主:</string>
    <string name="likeBtn">喜爱按钮</string>
    <string name="readBtn">读过按钮</string>
    <string name="borrowBtn">我想借书</string>
    <string name="writerIntroduce">作者简介：</string>
    <string name="book">图书:</string>
    <string name="keepTime">可借天数</string>
    <string name="select_book">扫描要分享的图书</string>
    <string name="translater">译者：</string>
    <string name="borrowName">借书人：</string>
    <string name="borrowPhone">电话：</string>
    <string name="borrowAddress">地址：</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>
    <string name="setting">设置</string>
    <string name="refuse_loan">拒绝借出</string>
    <string name="agree_loan">同意借出</string>
    <string name="change_owner">选择书主</string>
</resources>

