<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.a1949science.www.bookshare.activity.Login_Page"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@mipmap/login">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:ems="10"
            android:maxLength="11"
            android:id="@+id/phoneNum"
            android:hint="@string/login_name"
            android:paddingLeft="16dp"
            android:selectAllOnFocus="true"
            android:inputType="phone"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout13">

        <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/login_password"
            android:paddingLeft="16dp"
            android:selectAllOnFocus="true"
            android:layout_weight="1"
            android:inputType="textPassword" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout14">
        <TextView
            android:text="忘记密码"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:id="@+id/forgetPass"
            android:layout_marginBottom="15dp" />
        <CheckBox
            android:text="记住密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:id="@+id/pass_input"
            android:layout_marginBottom="15dp" />
    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:textSize="20sp"
        android:background="@drawable/rs_select_btn_blue"
        android:textColor="#FFFFFF"
        style="@style/Widget.AppCompat.Button"/>

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:textSize="20sp"
        android:background="@drawable/rs_select_btn_blue"
        android:textColor="#FFFFFF"
        style="@style/Widget.AppCompat.Button"/>

</LinearLayout>
